Bug 373493 - Flattening an animation with transform mask results in crash or artefacts
Summary: Flattening an animation with transform mask results in crash or artefacts
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 3.0.2 Alpha
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-10 10:40 UTC by Bollebib
Modified: 2017-04-06 18:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
there is a layer with transform to flatten. Also a layer with an EXAMPLE, to show what happens on my system (617.75 KB, application/x-krita)
2016-12-11 10:38 UTC, Bollebib
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bollebib 2016-12-10 10:40:21 UTC
i have an animation of a bird ,200 frames long

that i need to duplicate and move elsewhere,resize.

I use transform mask for this,and that works well,no bugs ,but since transform masks are slow to render I flatten the layer. This sometimes results into crashes.

Other times the merge is succesful but some frames have also some of the other frames as its contents. For this animation i could erase it out,one by one,but for bigger ,overlapping  frames that would not work as the lines would run through each other I think.



This is fairly serious as we need this to reuse animations for crowd animation.
Comment 1 Halla Rempt 2016-12-10 12:04:54 UTC
Can you make the file available, or else try to get a backtrace with the latest release candidate (https://docs.krita.org/Dr._Mingw_debugger)?
Comment 2 Bollebib 2016-12-11 10:38:51 UTC
Created attachment 102724 [details]
there is a layer with transform to flatten. Also a layer with an EXAMPLE, to show what happens on my system
Comment 3 Dmitry Kazakov 2016-12-12 09:43:43 UTC
Confirmed. Added to phabricator:

https://phabricator.kde.org/T4877
Comment 4 Dmitry Kazakov 2017-04-06 18:42:17 UTC
Git commit f14e1f3555e3b60091b129e24701f9a02d56d90f by Dmitry Kazakov.
Committed on 06/04/2017 at 18:40.
Pushed by dkazakov into branch 'master'.

Update delayed (shape and transform mask) layer before merging

Fixes T4877

M  +1    -0    libs/image/CMakeLists.txt
A  +24   -0    libs/image/KisDelayedUpdateNodeInterface.cpp     [License: GPL (v2+)]
A  +42   -0    libs/image/KisDelayedUpdateNodeInterface.h     [License: GPL (v2+)]
M  +25   -0    libs/image/kis_layer_utils.cpp
M  +12   -1    libs/image/kis_transform_mask.cpp
M  +5    -1    libs/image/kis_transform_mask.h
M  +1    -1    libs/ui/flake/kis_shape_layer.cc
M  +5    -3    libs/ui/flake/kis_shape_layer.h
M  +22   -17   plugins/tools/tool_transform2/kis_tool_transform.cc
M  +1    -1    plugins/tools/tool_transform2/kis_tool_transform.h

https://commits.kde.org/krita/f14e1f3555e3b60091b129e24701f9a02d56d90f