Update delayed (shape and transform mask) layer before merging

Fixes T4877
BUG:373493